# Last-Download-Manager

./: .gitignore  CMakeLists.txt  LastDM.sln  README.md  build.bat  build.ps1
LastDM/: LastDM.vcxproj  LastDM.vcxproj.filters
LastDM/core/: Download.cpp  Download.h  DownloadEngine.cpp  DownloadEngine.h  DownloadManager.cpp  DownloadManager.h
LastDM/database/: DatabaseManager.cpp  DatabaseManager.h
LastDM/resources/: app.rc
LastDM/ui/: CategoriesPanel.cpp  CategoriesPanel.h  DownloadsTable.cpp  MainWindow.cpp  MainWindow.h  OptionsDialog.cpp  OptionsDialog.h  SchedulerDialog.cpp  SpeedGraphPanel.cpp  SpeedGraphPanel.h
LastDM/utils/: Settings.h  ThemeManager.h
resources/: LastDM.manifest  app.rc
src/: main.cpp
src/core/: Download.cpp  DownloadEngine.cpp  DownloadEngine.h  DownloadManager.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/ui/: CategoriesPanel.cpp  CategoriesPanel.h  DownloadsTable.h  MainWindow.cpp  MainWindow.h  OptionsDialog.cpp  SchedulerDialog.h  SpeedGraphPanel.cpp  SpeedGraphPanel.h
src/utils/: HashUtils.cpp  HashUtils.h  Settings.cpp  ThemeManager.cpp
